--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "puppeteer": "^22.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.6",
